--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -27,6 +27,10 @@
         success:function(data){
 					$("#articles").append(data);
 					$("#loader").hide();
+					
+					var offset = $(".article:last").offset();
+					
+					window.scrollTo(offset.left, offset.top);
         },
         error:function (xhr, ajaxOptions, thrownError){
 					alert("Error Occured");
@@ -34,6 +38,10 @@
     });
     
 		$("#urls").text("");
+		
+		
+		
+		
 	}
 	
 	function add_url_keydown(event) {
@@ -145,7 +153,7 @@
 	<div class="small_columns">
 		<div class="maincol">
 			<label for="title" class="large_label" >Trail Title:</label>
-			<input type="text" name="title" value="" style="width:100%" id="title" class="large_text">
+			<input type="text" name="title" value="<%= params[:title] %>" style="width:100%" id="title" class="large_text">
 		</div>
 		<div class="sidecol">
 			<div class="round_box" style="margin-top:15px">
@@ -162,8 +170,8 @@
 
 	<div class="small_columns">
 		<div class="maincol">
-			<label for="ags" class="large_label" >Tags:</label>
-			<textarea name="tags" id="tags" class="large_text" style="width:100%;resize:none;height:50px;"></textarea>
+			<label for="topics" class="large_label" >Topics:</label>
+			<textarea name="topics" id="topics" class="large_text" style="width:100%;resize:none;height:50px;"></textarea>
 		</div>
 		<div class="sidecol">
 			<div class="round_box" style="margin-top:15px">
@@ -200,15 +208,13 @@
 	
 	<div class="small_columns">
 		<div class="maincol">
-			<%= image_tag "loader.gif", :style => "float:right;", :id => "loader" %>
 			<label for="urls" class="large_label" >URLs:</label>
 			<br>
-			<input type="button" id="add_urls" class="url_add_button" value="Add">
-			<textarea name="urls" id="urls" id="urls" class="large_text" style="width:520px;resize:none;height:75px;"></textarea>
-
 			
 			<div class="space_20"></div>
-			<div id="articles" style="padding-left:10px;border-left:10px solid #FFF">
+			
+			
+			<div id="articles">
 				<% 0.times do %>
 	
 				<%= render :partial => "article", :locals => 	{
@@ -224,6 +230,14 @@
 				<% end %>
 				
 			</div>
+			
+			
+			
+			<input type="button" id="add_urls" class="url_add_button" value="Add">
+			<textarea name="urls" id="urls" id="urls" class="large_text" style="width:520px;resize:none;height:75px;"><%= params[:urls] %></textarea>
+			<%= image_tag "loader.gif", :style => "float:right;margin-right:20px;", :id => "loader" %>
+			
+			<div class="space_20"></div>
 	
 	
 	
